# mono-lingua

./: .gitignore  README.md  makefile
client/: Cargo.toml  package.json
client/src/: index.css  index.html  index.js  main.rs
core/: Cargo.toml
core/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: index.html  index.js  lib.rs
server/: Cargo.toml
