[package]
authors = ["nathanjent <nathanjent@gmail.com>"]
name = "client"
version = "0.1.0"

[dependencies]
json = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
stdweb = "0.4.0"
urlparse = "0.7.3"
uuid = { version = "0.6.1", features = ["serde"] }

[dependencies.core]
path = "../core"
version = "0.1.0"
