[package]
authors = ["nathanjent <nathanjent@gmail.com>"]
name = "server"
version = "0.1.0"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
env_logger = "*"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

actix = "0.5"
actix-web = "0.4.0"

[dependencies.core]
path = "../core"
version = "0.1.0"
