[package]
authors = ["nathanjent <nathanjent@gmail.com>"]
name = "server"
version = "0.1.0"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
actix = "0.5"
actix-web = "0.4.0"
bytes = "0.4"
env_logger = "*"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4.0", features = ["serde"] }

[dependencies.core]
path = "../core"
version = "0.1.0"
